<resources>
    <string name="app_name">OpenWeather App</string>
    <string name="ui_searchBtn_text">Search</string>
    <string name="ui_geoBtn_text">Use My Location</string>
    <string name="ui_locationTxt_hint">Enter city, state or ZIP code…</string>
    <string name="ui_locationTxt_autohint">Miami, FL</string>
    <string name="ui_humidity_text">Humidity</string>
    <string name="ui_pressure_text">Pressure</string>
    <string name="ui_wind_text">Wind</string>
    <string name="ui_coordinates_text">Coordinates</string>
    <string name="author_name">Thomas Galinis</string>
    <string name="author_znumber">Z23546211</string>
    <string name="course">COP4655 Fall 2020</string>
    <string name="forecast_icon">Current weather conditions</string>
</resources>