<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftMarginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightMarginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <EditText
        android:id="@+id/locationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/ui_locationTxt_autohint"
        android:ems="10"
        android:hint="@string/ui_locationTxt_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/ui_searchBtn_text"
        app:layout_constraintEnd_toStartOf="@+id/geoBtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt" />

    <Button
        android:id="@+id/geoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ui_geoBtn_text"
        app:layout_constraintBottom_toBottomOf="@+id/searchBtn"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline"
        app:layout_constraintStart_toEndOf="@+id/searchBtn"
        app:layout_constraintTop_toTopOf="@+id/searchBtn" />

    <TextView
        android:id="@+id/mainFooterAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/author_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainFooterCourse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainFooterZnumber" />

    <TextView
        android:id="@+id/mainFooterZnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_znumber"
        app:layout_constraintBottom_toBottomOf="@+id/mainFooterAuthor"
        app:layout_constraintEnd_toStartOf="@+id/mainFooterAuthor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toTopOf="@+id/mainFooterAuthor" />

    <TextView
        android:id="@+id/mainFooterCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        app:layout_constraintBottom_toBottomOf="@+id/mainFooterAuthor"
        app:layout_constraintEnd_toStartOf="@+id/rightMarginGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainFooterAuthor"
        app:layout_constraintTop_toTopOf="@+id/mainFooterAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>